--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.PurrfectFinder"
         tools:targetApi="31">
         <activity
-            android:name=".Registration.RegistrationActivity2"
+            android:name=".Registration.Registration2Activity"
             android:exported="false" />
         <activity
             android:name=".Registration.RegistrationActivity"
