--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="35"/>
+
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +18,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PurrfectFinder"
         tools:targetApi="31">
+        <activity
+            android:name=".NoConnectionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Login.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Registration.RegistrationFinishActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Registration.RegistrationPostActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Registration.RegistrationTestActivity"
+            android:exported="false" />
         <activity
             android:name=".Registration.Registration2Activity"
             android:exported="false" />
