--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:maxSdkVersion="32" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -18,6 +20,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PurrfectFinder"
         tools:targetApi="31">
+        <receiver android:name=".NetworkChangeReceiver" android:exported="false">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
         <activity
             android:name=".NoConnectionActivity"
             android:exported="false" />
